--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,3 +8,4 @@
 @import "components/edit_trees";
 @import "components/my_bookings";
 @import "components/new_tree";
+@import "components/new_booking";
