--- a/app/views/trees/new.html.erb
+++ b/app/views/trees/new.html.erb
@@ -2,14 +2,18 @@
   <div class="row d-flex justify-content-center mx-0">
     <div class="col-md-4 mb-4">
       <div class="div-new-trees">
-        <h1 class="text-center">Create a new tree !</h1>
-        <%= simple_form_for [ @tree ] do |t| %>
-          <%= t.input :titre, input_html: {class: "text-list-new-tree"} %>
-          <%= t.input :taille, input_html: {class: "text-list-new-tree"} %>
-          <%= t.input :price, input_html: {class: "text-list-new-tree"} %>
-          <%= t.input :address, input_html: {class: "text-list-new-tree"} %>
-          <%= t.input :description, input_html: {class: "text-new-description"} %>
-          <%= t.submit class: "btn-create-tree" %>
+        <div class="div-input">
+          <h1 class="text-center">Create a new tree <%= image_tag "sapin.png", class: "create-title-img" %> !</h1>
+          <%= simple_form_for [ @tree ] do |t| %>
+            <%= t.input :titre, input_html: {class: "text-list-new-tree"} %>
+            <%= t.input :taille, input_html: {class: "text-list-new-tree"} %>
+            <%= t.input :price, input_html: {class: "text-list-new-tree"} %>
+            <%= t.input :address, input_html: {class: "text-list-new-tree"} %>
+            <%= t.input :description, input_html: {class: "text-new-description"} %>
+          </div>
+          <div class="div-btn-create-tree">
+            <%= t.submit class: "btn-create-tree" %>
+          </div>
         <% end %>
       </div>
     </div>
