--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
       <% @trees.each do |tree| %>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <% if tree.image.nil? %>
+            <% if tree.image == "" || tree.image.nil? %>
               <% tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
               <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
             <% else %>
