--- a/app/assets/stylesheets/components/_my_bookings.scss
+++ b/app/assets/stylesheets/components/_my_bookings.scss
@@ -27,3 +27,16 @@
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   transition: 0.8s ease;
 }
+
+.big-box-my-trees {
+  margin-top: 50px;
+}
+
+.my-trees-title .first-p {
+  padding-left: 5px;
+}
+
+.my-trees-title p, .count {
+  padding-top: 5px;
+  font-size: 24px;
+}
