--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-4 mb-4">
       <div class="card">
         <div class="card-body">
-          <% if @tree.image.nil? %>
+          <% if @tree.image == "" || @tree.image.nil? %>
             <% @tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
             <img src="<%= @tree.image %>" class="card-img-top" alt="tree Image">
           <% else %>
