--- a/app/assets/stylesheets/components/_new_booking.scss
+++ b/app/assets/stylesheets/components/_new_booking.scss
@@ -23,13 +23,19 @@
 }
 
 .text-list-new-booking,
-.text-new-description {
+.text-new-description,
+.text-list-end-date-booking {
   background-color: rgb(240, 240, 240) !important;
 }
 
 .text-list-new-booking:focus,
-.text-new-description:focus {
+.text-new-description:focus,
+.text-list-end-date-booking {
   background-color: white !important;
+}
+
+.text-list-end-date-booking {
+  margin-bottom: 20px;
 }
 
 .center-form {
@@ -65,8 +71,8 @@
 }
 
 .btn-create-booking {
-  transition: 0.8s ease;
-  margin-top: 10px;
+  transition: 0.5s ease;
+  margin-top: 20px;
   font-family: roboto;
   font-weight: bold;
   background-color: white;
@@ -75,23 +81,22 @@
   color: rgba(0,0,0,.5);
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 100px;
+  width: 35%;
   border-radius: 15px;
   margin-bottom: 10px;
   border: none;
 }
 
 .btn-create-booking:hover {
-  margin-top: 0;
   margin-bottom: 0;
-  width: 120%;
+  width: 100%;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   background-color: #71EFA3;
   color: black;
   font-weight: bold;
   box-shadow: rgba(0, 0, 0, 0.5);
-  transition: 0.8s ease;
+  transition: 0.5s ease;
 }
 
 .create-title-img {
@@ -106,4 +111,27 @@
 
 .input-new-reservation {
   text-align: center;
+}
+
+.div-new-reservation {
+  transition: 0.8s ease;
+  font-family: roboto;
+  color: black;
+  margin-top: 150px;
+  width: 450px;
+  height: auto;
+  background-color: rgb(245, 245, 245);
+  backdrop-filter: blur(5px);
+  border-radius: 15px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.div-new-reservation:hover {
+  background-color: rgb(214, 236, 213);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.div-input-new-reservation {
+  align-items: end;
+  margin-right: 95px;
 }
