--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -19,7 +19,7 @@
             </div>
           </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer-show-tree">
           <% if current_user == @tree.user%>
 
             <% @bookings.each do |booking| %>
