sign_in, Log_in, forgot_your_password

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,3 +8,5 @@
 @import "components/edit_trees";
 @import "components/my_bookings";
 @import "components/new_tree";
+@import "components/sign_in_trees";
+@import "components/new_passwords";
