--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,8 @@
 <h2>Forgot your password?</h2>
 
+<div class="big-box-show-trees">
+  <div class="row d-flex justify-content-center mx-0">
+    <div class="col-md-4 mb-4">
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
@@ -12,7 +15,10 @@
 
   <div class="form-actions">
     <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
+    </div>
+  </div>
+</div>
