--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,6 @@
 @import "components/edit_trees";
 @import "components/my_bookings";
 @import "components/new_tree";
-@import "components/sign_in_trees";
-@import "components/new_passwords";
-
+@import "components/sign_in";
+@import "components/log_in";
+@import "components/new_booking";
