--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -39,6 +39,7 @@
 
 .card {
   transition: 0.8s ease;
+  border: none;
   border-bottom-left-radius: 15px !important;
   border-bottom-right-radius: 15px !important;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2) !important;
