--- a/app/assets/stylesheets/components/_new_tree.scss
+++ b/app/assets/stylesheets/components/_new_tree.scss
@@ -13,13 +13,17 @@
   padding-bottom: 0.1px;
 }
 
-.div-input {
-  padding: 30px 30px 0 30px;
-}
-
 .div-new-trees:hover {
   background-color: rgb(214, 236, 213);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.div-new-trees h1 {
+  padding-top: 20px;
+}
+
+.div-text-new-tree {
+  padding: 0 30px;
 }
 
 .text-list-new-tree,
