--- a/app/assets/stylesheets/components/_sign_in.scss
+++ b/app/assets/stylesheets/components/_sign_in.scss
@@ -8,7 +8,7 @@
   backdrop-filter: blur(5px);
   padding: 30px;
   border-radius: 15px;
-  margin-top: 60px;
+  margin-top: 30px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -20,15 +20,18 @@
   padding-bottom: 0.1px;
 }
 
-.text-sign-in-tree {
-  margin-bottom: 50px;
+.div-sign-in-trees h1 {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 30px;
 }
+
 
 .text-sign-in-tree {
   background-color: rgb(240, 240, 240) !important;
 }
 
-.text-sign-in-tree {
+.text-sign-in-tree:focus {
   background-color: white !important;
 }
 
