--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,33 @@
-<h2>Sign up</h2>
 <div class="big-box-show-trees">
   <div class="row d-flex justify-content-center mx-0">
     <div class="col-md-4 mb-4">
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-  <div class="form-inputs">
-  <%= f.input :name,
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
+        <div class="div-sign-in-trees">
+          <h1>Sign in</h1>
+          <%= f.input :name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "name" }%>
-    <%= f.input :email,
+                input_html: { autocomplete: "name", class: "text-sign-in-tree" }%>
+          <%= f.input :email,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email", class: "text-sign-in-tree"}%>
-    <%= f.input :password,
+          <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password", class: "text-sign-in-tree"}%>
-    <%= f.input :password_confirmation,
+          <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password", class: "text-sign-in-tree"}%>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-  <%= render "devise/shared/links" %>
-  </div>
-
+          <div class="d-flex justify-content-center mb-4 pt-3">
+            <div class="form-actions">
+              <%= f.button :submit, "Sign in" %>
+            </div>
+            <%= render "devise/shared/links" %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
