--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,67 +32,71 @@
       </div>
       <%#= link_to "", class: "btn-search-search-navbar nav-link", data: {action:"click->toggle#search"} do %>
         <%# <i class="fa-solid fa-magnifying-glass"></i> %>
-      <%# end %>
-    </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-          </li>
-          <% if current_user%>
+        <%# end %>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto">
+          <% if user_signed_in? %>
             <li class="nav-item active">
-              <%= link_to "Add new tree", new_tree_path, class: "nav-link" %>
+              <%= link_to "Home", root_path, class: "nav-link" %>
+            </li>
+            <% if current_user%>
+              <li class="nav-item active">
+                <%= link_to "Add new tree", new_tree_path, class: "nav-link" %>
+              </li>
+            <% else %>
+              <li class="nav-item active">
+                <%= link_to "Add new tree", new_user_session_path, class: "nav-link" %>
+              </li>
+            <% end %>
+            <% if current_user%>
+              <li class="nav-item active">
+                <%= link_to "My trees", trees_path, class: "nav-link" %>
+              </li>
+            <%else %>
+              <li class="nav-item active">
+                <%= link_to "My trees", new_user_session_path, class: "nav-link" %>
+              </li>
+            <% end %>
+            <% if current_user%>
+              <li class="nav-item active">
+                <%= link_to "My bookings", bookings_path, class: "nav-link" %>
+              </li>
+            <%else %>
+              <li class="nav-item active">
+                <%= link_to "My bookings", new_user_session_path, class: "nav-link" %>
+              </li>
+            <% end %>
+            <li class="nav-item dropdown", data-controller="toggle">
+              <a href="#" class="avatar" id="navbarDropdown", data-action="click->toggle#fire", data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+              </a>
+              <div id="dropdown-menu", class="dropdown-menu dropdown-menu-end dropdown-transition d-none" aria-labelledby="navbarDropdown", data-toggle-target="togglableElement">
+                <div class="div-reservation-and-email">
+                <% if current_user %>
+                  <% total_bookings = current_user.trees.map{ |tree| tree.bookings}.flatten.count %>
+                  <% if total_bookings > 0 %>
+                    <p>Vous avez <strong><%= total_bookings %></strong> <%= "réservation".pluralize(total_bookings) %> sur vos arbres </p>
+                  <% else %>
+                    <p>Vous n'avez aucune reservation</p>
+                  <% end %>
+                <% end %>
+                <%= current_user.email %>
+                </div>
+                <div class="div-btn-log-out d-flex justify-content-center">
+                  <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link", id: "btn-log-out" %>
+                </div>
+              </div>
             </li>
           <% else %>
-            <li class="nav-item active">
-              <%= link_to "Add new tree", new_user_session_path, class: "nav-link" %>
+            <li class="nav-item">
+              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
             </li>
           <% end %>
-          <% if current_user%>
-            <li class="nav-item active">
-              <%= link_to "My trees", trees_path, class: "nav-link" %>
-            </li>
-          <%else %>
-            <li class="nav-item active">
-              <%= link_to "My trees", new_user_session_path, class: "nav-link" %>
-            </li>
-          <% end %>
-          <% if current_user%>
-            <li class="nav-item active">
-              <%= link_to "My bookings", bookings_path, class: "nav-link" %>
-            </li>
-          <%else %>
-            <li class="nav-item active">
-              <%= link_to "My bookings", new_user_session_path, class: "nav-link" %>
-            </li>
-          <% end %>
-          <li class="nav-item dropdown", data-controller="toggle">
-            <a href="#" class="avatar" id="navbarDropdown", data-action="click->toggle#fire", data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-            </a>
-            <div class="dropdown-menu dropdown-menu-end dropdown-transition d-none" aria-labelledby="navbarDropdown", data-toggle-target="togglableElement">
-              <% if current_user %>
-                <% total_bookings = current_user.trees.map{ |tree| tree.bookings}.flatten.count %>
-                <% if total_bookings > 0 %>
-                  <p>Vous avez <strong><%= total_bookings %></strong> <%= "réservation".pluralize(total_bookings) %> sur vos arbres </p>
-                <% else %>
-                  <p>You still don't have a reservation</p>
-                <% end %>
-              <% end %>
-              <%= current_user.email %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
