--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -27,7 +27,7 @@
           </div>
           <div class="my-booking-card-footer">
             <div class="div-text-booking-card-footer">
-            <p>Tree of : <%= booking.tree.user.email %></p>
+            <p>Tree of : <%= booking.tree.user.name %></p>
             <p><%= booking.start_date %> ... <%= booking.end_date %>
             </div>
           </div>
