--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
             <div class="card-body">
               <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
               <div class="d-flex flex-column justify-content-start">
-              <p>Arbre du User : <%= tree.user.name %></p>
+              <p>Tree of : <%= tree.user.name %></p>
                 <p><%= tree.address %></p>
                 <p><%= tree.description %></p>
                   <p><%= tree.taille %> cm</p>
